[package]
name = "tikzmk"
version = "0.1.0"
authors = ["pgw <pg999w@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
log = "*"
anyhow = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }

regex = "*"
nom = "5"
tinytemplate = "*"
open = "*"
